syntax = "proto3";

package grpc.gateway.dynamo;

enum StatusCode {
  OK = 0;
}

message StoredValue {
  string value = 1;
}

message PutRequest {
  int32 key = 1;
  StoredValue value = 2;
}

message PutResponse {
  StatusCode code = 1;
}

message GetRequest {
  int32 key = 1;
}

message GetResponse {
  oneof response {
    StoredValue value = 1;
    StatusCode error_code = 2;
  }
}

// A simple echo service.
service DynamoService {
  // One request followed by one response
  // The server returns the client message as-is.
  rpc Put(PutRequest) returns (PutResponse);

  // Sends back abort status.
  rpc Get(GetRequest) returns (GetResponse);
}

